2019-1/221/users/4109/executions/1654_2449.log
== TEST (2019-04-09 08:24:13) 
-- CODE:
a = float(input(a: ))
b = float(input(b: ))
c = float(input(c: ))
d = float(input(d: ))
e = float(input(e: ))
f = float(input(f: ))

x = (c*e - b*f) / a*e - b*d
y = (a*f - c*d) / a*e - b*d 

print(if(x))
print(if(y))
-- ERROR:
File "XXXX", line 1
    a = float(input(a: ))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:25:12) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / a*e - b*d
y = (a*f - c*d) / a*e - b*d 

print(if(x))
print(if(y))
-- ERROR:
File "XXXX", line 11
    print(if(x))
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:25:25) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / a*e - b*d
y = (a*f - c*d) / a*e - b*d 

print((x))
print((y))
-- OUTPUT:
-100.0
-100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:25:35) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / a*e - b*d
y = (a*f - c*d) / a*e - b*d 

print(x)
print(y)
-- OUTPUT:
-100.0
-100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:30:17) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / a*e - b*d
y = (a*f - c*d) / a*e - b*d 

if (x;y=0):
	print("Nao tem solucao")
	
print(x)
print(y)	
-- ERROR:
File "XXXX", line 11
    if (x;y=0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 08:30:17) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / a*e - b*d
y = (a*f - c*d) / a*e - b*d 

if (x;y=0):
	print("Nao tem solucao")
	
print(x)
print(y)	
-- EXECUTION TIME:
0.273843
-- ERROR:
  File "/home/codebench/codes/1654/2449/main.py", line 11
    if (x;y=0):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:30:36) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / a*e - b*d
y = (a*f - c*d) / a*e - b*d 

if (x=0):
	print("Nao tem solucao")
	
print(x)
print(y)	
-- ERROR:
File "XXXX", line 11
    if (x=0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:30:44) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / a*e - b*d
y = (a*f - c*d) / a*e - b*d 

if (x==0):
	print("Nao tem solucao")
	
print(x)
print(y)	
-- OUTPUT:
-100.0
-100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:31:18) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
print(x)
print(y)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 08:31:30) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
print(x)
print(y)	
-- EXECUTION TIME:
0.161156
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1654/2449/main.py", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 08:27:41) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
print(x)
print(y)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 08:28:37) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.169594
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1654/2449/main.py", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 08:28:37) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 08:28:44) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.189047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1654/2449/main.py", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 08:29:31) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 08:29:40) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 08:44:12) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 08:44:28) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 08:44:37) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.136716
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1654/2449/main.py", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 08:44:43) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 08:44:51) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 08:44:57) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 08:45:00) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 09:10:28) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 09:10:38) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 09:11:42) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x, y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 09:11:42) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x, y)
	
-- EXECUTION TIME:
0.20778
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1654/2449/main.py", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 09:11:53) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x, y)
	
-- EXECUTION TIME:
0.210556
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1654/2449/main.py", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 09:14:07) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x<0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.142057
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1654/2449/main.py", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 09:15:14) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x<=0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 09:15:26) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 09:22:19) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 09:22:27) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.151819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1654/2449/main.py", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 09:29:21) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x, y==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.15869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1654/2449/main.py", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 09:29:21) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c*e - b*f) / (a*e - b*d)
y = (a*f - c*d) / (a*e - b*d) 

if (x, y==0):
	print("Nao tem solucao")
	
else:
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f) / (a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 09:33:01) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))


 

if (a*e - b*d ==0):
	print("Nao tem solucao")
	
else:
	x = (c*e - b*f) / (a*e - b*d)
	y = (a*f - c*d) / (a*e - b*d)
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.153944
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 17:47:32) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))


 

if (a*e - b*d ==0):
	print("Nao tem solucao")
	
else:
	x = (c*e - b*f) / (a*e - b*d)
	y = (a*f - c*d) / (a*e - b*d)
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.282175
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 17:47:44) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))


 

if (a*e - b*d ==0):
	print("Nao tem solucao")
	
else:
	x = (c*e - b*f) / (a*e - b*d)
	y = (a*f - c*d) / (a*e - b*d)
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.155711
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 17:50:42) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))


 

if (a*e - b*d ==0):
	print("Nao tem solucao")
	
else:
	x = (c*e - b*f) / (a*e - b*d)
	y = (a*f - c*d) / (a*e - b*d)
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.175753
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 17:50:44) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))


 

if (a*e - b*d ==0):
	print("Nao tem solucao")
	
else:
	x = (c*e - b*f) / (a*e - b*d)
	y = (a*f - c*d) / (a*e - b*d)
	print(x)
	print(y)
	
-- EXECUTION TIME:
0.155546
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
